loosen requirements a bit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,14 @@ python = "^3.9"
 transformers = "^4.30.2"
 tokenizers = ">=0.13.3"
 accelerate = ">=0.20.3"
-datasets = "^2.12.0"
-peft = "^0.3.0"
+datasets = ">=2.12.0"
+peft = ">=0.3.0"
 bitsandbytes = ">=0.39.1"
-pyopenssl = "^23.2.0"
-optimum = "^1.9.0"
+pyopenssl = ">=23.2.0"
+optimum = ">=1.9.0"
 fschat = ">=0.2.28"
-codecarbon = "^2.1.4"
-scipy = "^1.10.1"
+codecarbon = ">=2.1.4"
+scipy = ">=1.10.1"
 
 
 [build-system]
