--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "simple-generation"
-version = "0.1.4"
+version = "0.1.5"
 description = "A python package to run inference with HuggingFace checkpoints wrapping many convenient features."
 authors = ["Giuseppe Attanasio <giuseppeattanasio6@gmail.com>"]
 license = "Apache Software License 2.0"
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-transformers = "^4.30.2"
+transformers = ">=4.30.2"
 tokenizers = ">=0.13.3"
 accelerate = ">=0.20.3"
 datasets = ">=2.12.0"
