initial commit for VLM - adds support to llava models - no batched inference - basic image loading with PIL from disk

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-transformers = ">=4.30.2"
+transformers = ">=4.39.3"
 tokenizers = ">=0.13.3"
 accelerate = ">=0.20.3"
 datasets = ">=2.12.0"
@@ -18,7 +18,12 @@ pyopenssl = ">=23.2.0"
 optimum = ">=1.9.0"
 codecarbon = ">=2.1.4"
 scipy = ">=1.10.1"
+pillow = { version = ">=10.3.0", optional = true }
 
+[tool.poetry.extras]
+vlm = [
+    "pillow",
+]
 
 [build-system]
 requires = ["poetry-core"]
