add batched vlm inference

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ optimum = ">=1.9.0"
 codecarbon = ">=2.1.4"
 scipy = ">=1.10.1"
 pillow = { version = ">=10.3.0", optional = true }
+#transformers_stream_generator = { version = ">=0.0.5", optional = true }
+#torchvision = { version = ">=0.17.2", optional = true }
 
 [tool.poetry.extras]
 vlm = [
