--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ pyopenssl = ">=23.2.0"
 optimum = ">=1.9.0"
 codecarbon = ">=2.1.4"
 scipy = ">=1.10.1"
-gradio = ">=4.37.2"
-langcodes = ">=3.4.0"
+gradio = { version = ">=4.37.2", optional = true }
+langcodes = { version = ">=3.4.0", optional = true }
 pillow = { version = ">=10.3.0", optional = true }
 
 #transformers_stream_generator = { version = ">=0.0.5", optional = true }
@@ -28,6 +28,12 @@ pillow = { version = ">=10.3.0", optional = true }
 [tool.poetry.extras]
 vlm = [
     "pillow",
+]
+gui = [
+    "gradio", "langcodes"
+]
+all = [
+    "pillow", "gradio", "langcodes"
 ]
 
 [tool.poetry.scripts]
